[package]
name = "es-manager"
version = "0.1.0"
authors = ["ben"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
directories = "3"
eframe = "0.10.0"
once_cell = "1.7.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
